[package]
name = "notepad-hijacker"
version = "0.1.0"
authors = ["Adolfo Ochagavía <github@adolfo.ochagavia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = [
        "errhandlingapi",
        "handleapi",
        "memoryapi",
        "psapi",
        "processthreadsapi"
    ] }
